infra/democracy-api/manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: democracy-api
  name: democracy-api
spec:
  type: ClusterIP
  selector:
    app: democracy-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
